<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btnContact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="addContact"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_id2" />

    <Button
        android:id="@+id/btnContact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="addContact"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContact1" />

    <Button
        android:id="@+id/btnContact3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="addContact"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContact2" />

    <TextView
        android:id="@+id/text_id2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/please_add_atleast_3_emergency_contacts"
        android:textColorHighlight="@android:color/primary_text_dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/contact2"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:padding="8dp"
        android:text="@string/contact_2"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnContact2"
        app:layout_constraintTop_toBottomOf="@+id/text_id2" />

    <TextView
        android:id="@+id/contact1"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:padding="8dp"
        android:text="@string/contact_1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnContact1"
        app:layout_constraintTop_toBottomOf="@+id/text_id2" />

    <TextView
        android:id="@+id/contact3"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:padding="8dp"
        android:text="@string/contact_3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnContact3"
        app:layout_constraintTop_toBottomOf="@+id/text_id2" />

</android.support.constraint.ConstraintLayout>

